--- a/Xamalist/Views/MainPage.xaml
+++ b/Xamalist/Views/MainPage.xaml
@@ -6,7 +6,24 @@
 		x:Class="Xamalist.Views.MainPage" 
 		Title="MainPage"
 	>
-	<StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-		<Label Text="{Binding Title}" />
+
+	<!-- iOS のとき、上に 20px 余白 -->
+	<ContentPage.Padding><OnPlatform x:TypeArguments="Thickness" iOS="0,20,0,0"></OnPlatform></ContentPage.Padding>
+
+	<StackLayout>
+		<!-- データ読み込みボタン -->
+		<Button Text="データ読み込み" Command="{Binding ReadAppDataCommand}" />
+		<!-- データ一覧リスト -->
+		<ListView ItemsSource="{Binding AppDatas}">
+			<ListView.ItemTemplate>
+				<DataTemplate>
+					<!-- メモ：ViewCell の中は複雑なレイアウトを組むことができる -->
+					<ViewCell>
+						<Label Text="{Binding Name}" />
+					</ViewCell>
+				</DataTemplate>
+			</ListView.ItemTemplate>
+		</ListView>
 	</StackLayout>
+	
 </ContentPage>
