Azureからデータを読み込んでいる最中はスピナーを表示する＆読み込みボタンを非アクティブにする

--- a/Xamalist/Views/MainPage.xaml
+++ b/Xamalist/Views/MainPage.xaml
@@ -10,20 +10,25 @@
 	<!-- iOS のとき、上に 20px 余白 -->
 	<ContentPage.Padding><OnPlatform x:TypeArguments="Thickness" iOS="0,20,0,0"></OnPlatform></ContentPage.Padding>
 
-	<StackLayout>
-		<!-- データ読み込みボタン -->
-		<Button Text="データ読み込み" Command="{Binding ReadAppDataCommand}" />
-		<!-- データ一覧リスト -->
-		<ListView ItemsSource="{Binding AppDatas}">
-			<ListView.ItemTemplate>
-				<DataTemplate>
-					<!-- メモ：ViewCell の中は複雑なレイアウトを組むことができる -->
-					<ViewCell>
-						<Label Text="{Binding Name}" />
-					</ViewCell>
-				</DataTemplate>
-			</ListView.ItemTemplate>
-		</ListView>
-	</StackLayout>
+	<Grid>
+		<StackLayout>
+			<!-- データ読み込みボタン -->
+			<Button Text="データ読み込み" Command="{Binding ReadAppDataCommand}" />
+			<!-- データ一覧リスト -->
+			<ListView ItemsSource="{Binding AppDatas}">
+				<ListView.ItemTemplate>
+					<DataTemplate>
+						<!-- メモ：ViewCell の中は複雑なレイアウトを組むことができる -->
+						<ViewCell>
+							<Label Text="{Binding Name}" />
+						</ViewCell>
+					</DataTemplate>
+				</ListView.ItemTemplate>
+			</ListView>
+		</StackLayout>
+
+		<!-- 読み込み中はスピナーを表示する -->
+		<ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
+	</Grid>
 	
 </ContentPage>
