一覧画面の項目が選択された時、詳細ページへと遷移するようにした

--- a/Xamalist/Views/DetailPage.xaml
+++ b/Xamalist/Views/DetailPage.xaml
@@ -1,5 +1,12 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="Xamalist.DetailPage">
+<?xml version="1.0" encoding="UTF-8"?>
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+		xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+		x:Class="Xamalist.DetailPage"
+		xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms" 
+		prism:ViewModelLocator.AutowireViewModel="True" 
+		Title="詳細ページ"
+		>
 	<ContentPage.Content>
+		
 	</ContentPage.Content>
 </ContentPage>
