--- a/Xamalist/Views/MainPage.xaml
+++ b/Xamalist/Views/MainPage.xaml
@@ -17,12 +17,44 @@
 	<Grid>
 		<StackLayout>
 			<!-- データ一覧リスト -->
-			<ListView ItemSelected="OnItemTapped" ItemsSource="{Binding AppDatas}">
+			<ListView ItemSelected="OnItemTapped" ItemsSource="{Binding AppDatas}" HasUnevenRows="True">
 				<ListView.ItemTemplate>
 					<DataTemplate>
 						<!-- メモ：ViewCell の中は複雑なレイアウトを組むことができる -->
 						<ViewCell>
-							<Label Text="{Binding Name}" />
+							<!-- 一行 -->
+							<StackLayout Orientation="Horizontal" Margin="2.5">
+				                <Image Source="{Binding IconImageUrl}" 
+				                       WidthRequest="50"
+				                       HeightRequest="50"/>
+				                <StackLayout HorizontalOptions="FillAndExpand">
+									<Label Text="{Binding Name}"
+				                         FontSize="18"
+				                         FontAttributes="Bold"
+				                         VerticalTextAlignment="Center"
+				                         LineBreakMode="TailTruncation"/>
+									<Label Text="{Binding Description}"
+				                         VerticalTextAlignment="Center"/>
+				                </StackLayout>
+				                <Grid>
+				                  <Grid.RowDefinitions>
+				                    <RowDefinition />
+				                    <RowDefinition />
+				                  </Grid.RowDefinitions>
+				                  <Grid.ColumnDefinitions>
+				                    <ColumnDefinition />
+				                    <ColumnDefinition />
+				                  </Grid.ColumnDefinitions>
+				                  <Label Text="Android" />
+				                  <Label Text="iOS" 
+				                         Grid.Row="1"/>
+				                  <Label Text="UWP"
+				                         Grid.Column="1"/>
+				                  <Label Text="GitHub" 
+				                         Grid.Row="1"
+				                         Grid.Column="1"/>
+				                </Grid>                
+				              </StackLayout>
 						</ViewCell>
 					</DataTemplate>
 				</ListView.ItemTemplate>
