--- a/Xamalist/Views/MainPage.xaml
+++ b/Xamalist/Views/MainPage.xaml
@@ -25,8 +25,8 @@
 							<!-- 一行 -->
 							<StackLayout Orientation="Horizontal" Margin="2.5">
 				                <Image Source="{Binding IconImageUrl}" 
-				                       WidthRequest="50"
-				                       HeightRequest="50"/>
+				                       WidthRequest="60"
+				                       HeightRequest="60"/>
 				                <StackLayout HorizontalOptions="FillAndExpand">
 									<Label Text="{Binding Name}"
 				                         FontSize="18"
@@ -35,22 +35,31 @@
 				                         LineBreakMode="TailTruncation"/>
 									<Label Text="{Binding Description}"
 				                         VerticalTextAlignment="Center"/>
+									
 				                </StackLayout>
 				                <Grid>
 				                  <Grid.RowDefinitions>
-				                    <RowDefinition />
-				                    <RowDefinition />
+				                    <RowDefinition Height="Auto" />
+				                    <RowDefinition Height="Auto" />
 				                  </Grid.RowDefinitions>
 				                  <Grid.ColumnDefinitions>
-				                    <ColumnDefinition />
-				                    <ColumnDefinition />
+				                    <ColumnDefinition Width="Auto" />
+				                    <ColumnDefinition Width="Auto" />
 				                  </Grid.ColumnDefinitions>
-				                  <Label Text="Android" />
-				                  <Label Text="iOS" 
-				                         Grid.Row="1"/>
-				                  <Label Text="UWP"
+				                  <Image Source="androidEnable.png" 
+				                       WidthRequest="20"
+				                       HeightRequest="20"/>
+				                  <Image Source="androidEnable.png" 
+				                       	WidthRequest="20"
+				                       	HeightRequest="20"
+										Grid.Row="1"/>
+				                  <Image Source="androidEnable.png" 
+				                       	WidthRequest="20"
+				                       	HeightRequest="20"
 				                         Grid.Column="1"/>
-				                  <Label Text="GitHub" 
+				                  <Image Source="androidEnable.png" 
+				                       	WidthRequest="20"
+				                       	HeightRequest="20" 
 				                         Grid.Row="1"
 				                         Grid.Column="1"/>
 				                </Grid>                
