登録ページに遷移するようにした

--- a/Xamalist/Views/MainPage.xaml
+++ b/Xamalist/Views/MainPage.xaml
@@ -17,6 +17,8 @@
 	</ContentPage.Resources>
 	
 	<ContentPage.ToolbarItems>
+		<!-- 新規登録ボタン -->
+		<ToolbarItem Text="登録" Command="{Binding NavigateToRegisterPageCommand}" />
 		<!-- データ読み込みボタン -->
 		<ToolbarItem Text="更新" Command="{Binding ReadAppDataCommand}" />
 	</ContentPage.ToolbarItems>
