--- a/Xamalist/Views/MainPage.xaml
+++ b/Xamalist/Views/MainPage.xaml
@@ -19,8 +19,6 @@
 	<ContentPage.ToolbarItems>
 		<!-- 新規登録ボタン -->
 		<ToolbarItem Text="登録" Command="{Binding NavigateToRegisterPageCommand}" />
-		<!-- データ読み込みボタン -->
-		<ToolbarItem Text="更新" Command="{Binding ReadAppDataCommand}" />
 	</ContentPage.ToolbarItems>
 	
 	<!-- iOS のとき、上に 20px 余白 -->
@@ -29,7 +27,9 @@
 	<Grid>
 		<StackLayout>
 			<!-- データ一覧リスト -->
-			<ListView ItemSelected="OnItemTapped" ItemsSource="{Binding AppDatas}" HasUnevenRows="True">
+			<ListView ItemSelected="OnItemTapped" ItemsSource="{Binding AppDatas}" HasUnevenRows="True" 
+					  IsPullToRefreshEnabled="true" RefreshCommand="{Binding ReadAppDataCommand}"
+			>
 				<ListView.ItemTemplate>
 					<DataTemplate>
 						<!-- メモ：ViewCell の中は複雑なレイアウトを組むことができる -->
