[あとでreverseする] Mobile Center の table 機能を使う。そのために一度 Blogアップロードのコードをコメントアウト

--- a/Xamalist/Views/RegisterPage.xaml
+++ b/Xamalist/Views/RegisterPage.xaml
@@ -23,8 +23,9 @@
 
 
 			<Label Text="アイコン画像" />
-			<Button Text="参照" Clicked="OnImageButtonClicked" />
-			<Image x:Name="ImagePreview" />
+			<!--<Button Text="参照" Clicked="OnImageButtonClicked" />-->
+			<Entry Text="{Binding RegisteringAppData.IconImageUrl}" />
+			<!--<Image x:Name="ImagePreview" />-->
 
 			
 			<Label Text="アプリ簡易説明" />
